--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "iconsax-react-native": "^0.0.8",
+    "query-string": "^9.1.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.9",
