--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/storage": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -24,6 +26,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-crop-picker": "^0.41.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
