--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/storage": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
@@ -23,14 +24,17 @@
     "query-string": "^9.1.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-date-picker": "^5.0.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.4.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2"
   },
