--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,3 +5,6 @@ rootProject.name = 'GreenStay'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
 
+include ':react-native-html-to-pdf'
+project(':react-native-html-to-pdf').projectDir = new File(rootProject.projectDir,'../node_modules/react-native-html-to-pdf/android')
+
