--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/storage": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -24,13 +25,18 @@
     "query-string": "^9.1.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-blob-util": "^0.19.11",
     "react-native-date-picker": "^5.0.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.4.1",
+    "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.6.0",
