--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "iconsax-react-native": "^0.0.8",
+    "moti": "^0.29.0",
     "query-string": "^9.1.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
@@ -37,6 +39,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.4.1",
     "react-native-pdf": "^6.7.5",
+    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.6.0",
